--- a/.github/workflows/My-first workflow.yml
+++ b/.github/workflows/My-first workflow.yml
@@ -2,6 +2,11 @@ name: GitHub Actions demo
 
 on:
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        type: environment
+        required: true
   push:
     branches: 
     - main
@@ -25,3 +30,45 @@ jobs:
         run: |
           echo "Repo ${{ github.repository }}:"
           tree
+  Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Test
+    steps:
+      - run: echo "Testing"
+
+  Load-Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Load-Test
+    steps:
+      - run: |
+          echo "Testing..."
+          sleep 15
+
+  Production:
+    runs-on: ubuntu-latest
+    needs: [Test, Load-Test]
+    environment:
+      name: Production
+      url: https://writeabout.net
+    if: github.event.inputs.environment == 'Production'
+    steps:
+      - run: |
+          echo "Step 1..."
+          sleep 10
+      - run: |
+          echo "Step 2..."
+          sleep 10
+      - run: |
+          echo "Step 3..."
+          sleep 10
+      - run: |
+          echo "Step 4..."
+          sleep 10
+      - run: |
+          echo "Step 5..."
+          sleep 10
+      
